# dunedynasty

./: .gitattributes  .gitignore  CHANGES.txt  CMakeLists.txt  FileList.cmake  README.md  README.txt  README_dd.txt  com.gameflorist.dunedynasty.yaml  config.lib  enhancement.txt  opendune.txt  package-lock.json  package.json
.github/workflows/: ios-build.yml  linux-arm64-build.yml  linux-build.yml  linux-x86-64-build.yml  linux-x86-64-build.yml_  macos-arm-build.yml  macos-arm64-build.yml  macos-build.yml  macos-intel-build.yml  macos-x86-64-build.yml  macos-x86-64-build.yml_  windows-arm64-build.yml  windows-build.yml  windows-x64-build.yml  windows-x86-build.yml  windows-x86-build.yml_
assets/: banner.psd
cmake/: FileList.cmake
dist-os-specific/macos/: setup
include/: MacOSXBundleInfo.plist.in  buildcfg.h.in  enum_house.h  enum_landscape.h  enum_language.h  enum_string.h  enum_structure.h  enum_unit.h  enumeration.h  errorlog.h  fourcc.h  multichar.h  types.h
licences/: LICENCE.audlib
scripts/: build-ios.sh  build-linux.sh  build-macos-arm64.sh  build-macos-bundle.sh  build-macos.sh  build-windows-arm64.sh  build-windows-x64.sh  build-windows-x86.sh  build-windows.sh  bundle-libs-linux.sh  bundle-libs-macos.sh  bundle-libs-ucrt64.sh  cleanup-build.sh  copy-dlls-mingw32.sh  generate-macos-app.sh  generate-readme-txt.js
src/: ai.c  ai.h  animation.c  animation.h  binheap.c  binheap.h  buildqueue.c  buildqueue.h  common_a5.c  common_a5.h  config.c  config.h  config_a5.c  cutscene.c  cutscene.h  enhancement.c  enhancement.h  explosion.c  explosion.h  file.c  file.h  gameloop.c  gameloop.h  gfx.c  gfx.h  house.c  house.h  ini.c  load.c  load.h  map.c  map.h  object.c  object.h  opendune.c  opendune.h  save.c  save.h  scenario.c  scenario.h  (+20 more)
src/audio/: allegro_adl.cpp  allegro_mad.c  allegro_mad.h  allegro_midi.cpp  allegro_midi.h  audio.c  audio.h  audio_a5.c  audio_a5.cpp  audio_a5.h  disable_aud.h  disable_mad.h  disable_midi.h  driver.c  driver.h  dsp.h  dsp_alsa.c  midi.h  midi_alsa.c  midi_osx.c  midi_win32.c  mt32mpu.c  mt32mpu.h  sound.c  sound.h
src/audio/adl/: fmopl.cpp  fmopl.h  opl_dosbox.cpp  opl_dosbox.h  opl_inc.h  opl_mame.cpp  opl_mame.h  sound_adlib.cpp  sound_adlib.h
src/audio/audlib/: CHANGES  Makefile  README  WISHLIST  audlib.c  audlib.h  audlib_a5.c  audlib_a5.h  example.c  example_a5.c  welcome.aud
src/audio/xmi/: databuf.h  xmidi.cpp  xmidi.h
src/codec/: format80.c  format80.h
src/crashlog/: crashlog.h  crashlog_none.c  errorlog_std.c  errorlog_win32.c
src/gui/: editbox.c  font.c  font.h  gui.c  gui.h  mentat.c  mentat.h  menu_opendune.c  security.c  security.h  viewport.c  widget.c  widget.h  widget_click.c  widget_draw.c
src/icon/: dune2_icon.icns  icon.rc
src/input/: input.c  input.h  input_a5.c  input_a5.h  input_dd.c  input_opendune.c  input_opendune.h  mouse.c  mouse.h  mouse_dd.c  mouse_opendune.c  mouse_opendune.h  scancode.h
src/mapgenerator/: skirmish.c  skirmish.h
src/mods/: landscape.c  landscape.h  mapgenerator.c  mapgenerator.h  multiplayer.c  multiplayer.h  skirmish.c  skirmish.h
src/net/: client.c  client.h  message.c  message.h  net.h  net_enet.c  server.c  server.h
src/newui/: actionpanel.c  actionpanel.h  chatbox.c  chatbox.h  editbox.c  editbox.h  halloffame.c  halloffame.h  mentat.c  mentat.h  menu.c  menu.h  menu_extras.c  menu_lobby.c  menu_lobby.h  menubar.c  menubar.h  savemenu.c  savemenu.h  scrollbar.c  scrollbar.h  slider.c  slider.h  strategicmap.c  strategicmap.h  viewport.c  viewport.h
src/os/: endian.c  endian.h  error.c  error.h  error_win32.c  sleep.h  strings.h
src/pool/: house.c  house.h  pool.h  pool_house.c  pool_house.h  pool_structure.c  pool_structure.h  pool_team.c  pool_team.h  pool_unit.c  pool_unit.h  structure.c  structure.h  team.c  team.h  unit.c  unit.h
src/saveload/: house.c  info.c  map.c  object.c  saveload.c  saveload.h  scenario.c  scriptengine.c  structure.c  team.c  unit.c
src/script/: general.c  script.c  script.h  structure.c  team.c  unit.c
src/table/: actioninfo.c  animation.c  fileinfo.c  houseanimation.c  houseanimation.h  houseinfo.c  landscapeinfo.c  locale.c  locale.h  movementtype.c  selectiontype.c  sound.c  sound.h  strings.h  structureinfo.c  unitinfo.c  widget.c  widgetinfo.c  widgetinfo.h  windowdesc.c
src/timer/: timer.c  timer.h  timer_a5.c  timer_a5.h  timer_common.c  timer_common.h  timer_opendune.c  timer_opendune.h
src/tools/: coord.c  coord.h  encoded_index.c  encoded_index.h  orientation.c  orientation.h  random_general.c  random_general.h  random_lcg.c  random_lcg.h  random_starport.c  random_starport.h  random_xorshift.c  random_xorshift.h
src/video/: dune2_16x16.xpm  dune2_32x32.xpm  dune2_32x32a.xpm  prim.h  prim_a5.c  video.h  video_a5.c  video_a5.h  video_opendune.c  video_sdl.c  video_sdl.h
static/general/: README.txt  dunedynasty.cfg-sample  enhancement.txt
static/general/campaign/: HOUSE.INI-sample  PROFILE.INI-sample
static/general/campaign/dune2x/: HOUSE.INI  META.INI
static/general/campaign/mfas/: META.INI
static/general/campaign/shac/: META.INI
static/general/campaign/superdune2/: META.INI  PROFILE.INI
static/general/data/: FILELIST.TXT
static/general/music/: music.cfg
static/general/music/d2tm_adlib/: volume.cfg
static/general/music/d2tm_sc55/: FILELIST.TXT  volume.cfg
static/general/music/dune1984_ost/: FILELIST.TXT
static/general/music/dune1992_adlib/: FILELIST.TXT
static/general/music/dune1992_scdb/: FILELIST.TXT
static/general/music/dune1992_spiceopera/: FILELIST.TXT
static/general/music/dune2000/: FILELIST.TXT
static/general/music/dune2021_ost/: FILELIST.TXT
static/general/music/dune2021_sketchbook/: FILELIST.TXT
static/general/music/dune2_amiga/: FILELIST.TXT
static/general/music/dune2_pcspeaker/: FILELIST.TXT
static/general/music/dune2_smd/: volume.cfg
static/linux/: dunedynasty-launcher  dunedynasty.desktop  io.github.gameflorist.dunedynasty.desktop  io.github.gameflorist.dunedynasty.metainfo.xml
static/macos-bundle/: setup
(+8 files in other folders)
